--- a/css/style.css
+++ b/css/style.css
@@ -9,15 +9,32 @@ header {
     margin-left: 0px
 }
 .title {
-    background-color: var(--primary);
+    background-color: var(--tertiary);
+    color: var(--secondary);
+    font-size: 3rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    text-align: center;
 }
 nav {
-    background-color: var(--secondary);
+    background-color: var(--tertiary);
+    color: var(--secondary);
+}
+nav .nav-link {
+    padding-bottom: 1.5rem;
+    padding-top: 1.5rem;
+    padding-left: 12rem;
+    padding-right: 12rem;
+    border: 1px solid var(--secondary);
+}
+nav .nav-link:hover {
+    font-weight: bold;
+    background-color: var(--primary);
 }
 
 body {
-    background-color: var(--text-secondary);
-    color: var(--text-primary)
+    background-color: var(--primary);
+    color: var(--text-secondary)
 }
 footer {
     background-color: var(--tertiary);
