--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,50 @@
 :root {
-    --primary: #A50104; 
-    --secondary: #FCBA04;
-    --tertiary: #590004;
-    --text-primary: #250001;
-    --text-secondary: #F3F3F3; 
+  --primary: #A50104;
+  --secondary: #FCBA04;
+  --tertiary: #590004;
+  --text-primary: #250001;
+  --text-secondary: #F3F3F3;
 }
+
 header {
-    margin-left: 0px
+  margin-left: 0px;
 }
+
 .title {
-    background-color: var(--tertiary);
-    color: var(--secondary);
-    font-size: 3rem;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    text-align: center;
+  background-color: var(--tertiary);
+  color: var(--secondary);
+  font-size: 3rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  text-align: center;
 }
+
 nav {
-    background-color: var(--tertiary);
-    color: var(--secondary);
+  background-color: var(--tertiary);
+  color: var(--secondary);
 }
+
 nav .nav-link {
-    padding-bottom: 1.5rem;
-    padding-top: 1.5rem;
-    padding-left: 12rem;
-    padding-right: 12rem;
-    border: 1px solid var(--secondary);
+  padding-bottom: 1.5rem;
+  padding-top: 1.5rem;
+  padding-left: 12rem;
+  padding-right: 12rem;
+  border: 1px solid var(--secondary);
 }
+
 nav .nav-link:hover {
-    font-weight: bold;
-    background-color: var(--primary);
+  font-weight: bold;
+  background-color: var(--primary);
 }
 
 body {
-    background-color: var(--primary);
-    color: var(--text-secondary)
+  background-color: var(--primary);
+  color: var(--text-secondary);
 }
+
 footer {
-    background-color: var(--tertiary);
-    color: var(--secondary);
+  background-color: var(--tertiary);
+  color: var(--secondary);
 }
+
+/*# sourceMappingURL=style.css.map */
