--- a/css/style.scss
+++ b/css/style.scss
@@ -5,6 +5,12 @@
     --text-primary: #250001;
     --text-secondary: #F3F3F3;
 }
+
+body {
+    background-color: var(--primary);
+    color: var(--text-secondary)
+}
+
 header {
     margin-left: 0px
 }
@@ -31,12 +37,21 @@ nav .nav-link:hover {
     font-weight: bold;
     background-color: var(--primary);
 }
-
-body {
-    background-color: var(--primary);
-    color: var(--text-secondary)
+nav .nav-link.active {
+    color: var(--text-secondary);
 }
+
+.content {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+#carouselHome img {
+    border-radius: 25%;
+    border: 2px solid var(--text-primary)
+}
+
 footer {
     background-color: var(--tertiary);
     color: var(--secondary);
+    padding-left: 1.5rem;
 }
