--- a/css/style.scss
+++ b/css/style.scss
@@ -50,6 +50,17 @@ nav .nav-link.active {
     border: 2px solid var(--text-primary)
 }
 
+.menu-section{
+    padding-bottom: 2rem;
+    padding-top: 2rem;
+}
+.menu-img img {
+    width: 585px;
+    height: auto;
+    border-radius: 10%;
+    border: 2px solid var(--text-primary);
+}
+
 footer {
     background-color: var(--tertiary);
     color: var(--secondary);
